<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <EditText

       android:id="@+id/editText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:background="@drawable/edittext_design"
       android:hint="@string/inserisci_il_tuo_nome"
       android:padding="10dp"
       android:textSize="16sp">

   </EditText>

    <EditText

        android:id="@+id/editTextp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_design"
        android:hint="@string/inserisci_la_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp">

    </EditText>

    <Button
        android:id="@+id/buttonEntra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="22dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/registrati"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonEntra"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="23dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/accedi"
        android:textColor="#ffffff" />

</RelativeLayout>