<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityChat">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/messageEdit"
        />

    <EditText
        android:id="@+id/messageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@id/sendBtn"
        android:background="@drawable/edittext_design"
        android:hint="@string/messaggio"
        android:padding="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/invia"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"

        />

    <ImageView
        android:id="@+id/pickImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@id/messageEdit"
        android:contentDescription="@string/media"
        android:padding="8dp"
        android:src="@drawable/ic_image_black_24dp"
        android:tint="@color/colorPrimary" />

</RelativeLayout>